# ipynb

./: .travis.yml  Changelog.md  LICENSE  Makefile  README.md  TODO.org  cabal.project  cabal.project.ci  convert.hs  ipynb.cabal  stack.yaml
.circleci/: config.yml
.github/workflows/: ci.yml
src/Data/: Ipynb.hs
test/: roundtrip.hs  test-ipynb.hs
