name:                ipynb
version:             0.1.0.0
synopsis:            Data structure and JSON serializer/deserializer for
                     Jupyter notebooks (.ipynb) format.
-- description:
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane and Paul Ivanov
maintainer:          jgm@berkeley.edu
copyright:           Copyright (C) 2019 John MacFarlane and Paul Ivanov
category:            Text
build-type:          Simple
extra-source-files:  Changelog.md
cabal-version:       >=1.10

library
  exposed-modules:   Data.Ipynb
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       containers,
                       unordered-containers,
                       base64-bytestring,
                       aeson,
                       aeson-pretty,
                       bytestring,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-ipynb
  type:                exitcode-stdio-1.0
  main-is:             test-ipynb.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       ipynb,
                       tasty,
                       tasty-hunit,
                       tasty-golden,
                       aeson,
                       aeson-pretty,
                       bytestring,
                       text
  hs-source-dirs:      test
  default-language:    Haskell2010


