name:                ipynb
version:             0.1.0.0
synopsis:            Data structure and JSON serializer/deserializer for
                     Jupyter notebooks (.ipynb) format.
-- description:
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane and Paul Ivanov
maintainer:          jgm@berkeley.edu
copyright:           Copyright (C) 2019 John MacFarlane and Paul Ivanov
category:            Text
build-type:          Simple
extra-source-files:  Changelog.md
cabal-version:       >=1.10

library
  exposed-modules:   Data.Ipynb
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       containers,
                       unordered-containers,
                       base64-bytestring,
                       aeson,
                       bytestring,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite roundtrip
  type:                exitcode-stdio-1.0
  main-is:             roundtrip.hs
  -- other-modules:
  -- other-extensions:
  other-source-files:  test/rt-files/*.ipynb
  build-depends:       base,
                       ipynb,
                       filepath,
                       directory,
                       tasty,
                       tasty-hunit,
                       aeson,
                       aeson-diff,
                       bytestring,
                       microlens-aeson,
                       microlens,
                       unordered-containers,
                       base64-bytestring,
                       text,
                       vector
  hs-source-dirs:      test
  default-language:    Haskell2010

-- for testing
-- executable convert
--   main-is:             convert.hs
--   build-depends:       base,
--                        ipynb,
--                        aeson,
--                        aeson-pretty,
--                        bytestring
--   hs-source-dirs:      .
--   default-language:    Haskell2010

